# mortada

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi_app/: embeddings.py  llm_loader.py  main.py  retriever.py  service_context.py
fastapi_app/templates/: index.html
scripts/: eval.py  ingest.py
tests/: corpus.json  test_app.py
